--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
 }
 
 .logo {
-  font-size: 40px;
+  font-size: 250px;
   font-weight: bold;
 }
 
@@ -59,7 +59,7 @@ body {
   font-weight: bold;
   color: black;
   margin-left: 20px;
-  font-size: 16px;
+  font-size: 12px;
 }
 
 
@@ -75,7 +75,7 @@ body {
 #text {
     font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 12px;
     padding: 0;
     margin: 0;
 }
@@ -84,10 +84,11 @@ body {
     text-decoration: none;
     color: black;
     font-weight: bold;
+    font-size: 12px
 }
 
 .logo {
-  font-size: 40px;
+  font-size: 25px;
   font-weight: bold;
 }
 
@@ -113,7 +114,7 @@ body {
 
   .nav a {
     margin: 0 10px;
-    font-size: 16px;
+    font-size: 20px;
   }
 
   .header {
@@ -131,7 +132,7 @@ body {
 
         .title {
             text-align: center;
-            font-size: 32px;
+            font-size: 25px;
             font-weight: bold;
             margin-bottom: 20px;
         }
@@ -178,7 +179,7 @@ body {
   }
 
   .nav a {
-    font-size: 25px;
+    font-size: 35px;
   }
   
     .footer {
