--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,17 @@ body {
             padding: 0 auto;
         }
 
+
+      p {
+           font-size: 16px;
+       }
+
+     
+     h2 {
+           font-size: 20px;
+        }
+
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -39,7 +50,6 @@ body {
 }
 
 .logo {
-  font-size: 30px;
   font-weight: bold;
 }
 
@@ -59,7 +69,6 @@ body {
   font-weight: bold;
   color: black;
   margin-left: 20px;
-  font-size: 16px;
 }
 
 
@@ -75,7 +84,6 @@ body {
 #text {
     font-weight: bold;
     color: white;
-    font-size: 16px;
     padding: 0;
     margin: 0;
 }
@@ -84,11 +92,9 @@ body {
     text-decoration: none;
     color: black;
     font-weight: bold;
-    font-size: 16px
 }
 
 .logo {
-  font-size: 25px;
   font-weight: bold;
 }
 
