--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,6 @@ body {
             padding: 0 auto;
         }
 
-
-      p {
-           font-size: 16px;
-       }
-
-     
-     h2 {
-           font-size: 20px;
-        }
-
-
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -51,6 +40,7 @@ body {
 
 .logo {
   font-weight: bold;
+  font-weight: 2em;
 }
 
 .prothought {
