--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,13 @@ body {
 .prothought {
   color: black;
   font-weight: bold;
+  font-size: 2em;
 }
 
 .insight {
   color: white;
   font-weight: bold;
+  font-size: 2em;
 }
 
 
@@ -59,6 +61,7 @@ body {
   font-weight: bold;
   color: black;
   margin-left: 20px;
+  font-size: 1em;
 }
 
 
