--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,10 @@ body {
         
 
    . font {
-       font-size: 16px
+       font-size: 14px;
+       font-weight: bold;
+       text-decoration: none;
+       color: black;
      }
 
 
