--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,12 @@ body {
         }
         
 
-   . font {
+   .font {
        font-size: 14px;
+     }
+       
+
+   .font nav {
        font-weight: bold;
        text-decoration: none;
        color: black;
@@ -70,7 +74,6 @@ body {
   font-weight: bold;
   color: black;
   margin-left: 20px;
-  font-size: 1em;
 }
 
 
