--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,13 @@
   text-decoration: none;
   font-weight: bold;
   color: black;
+  margin-left: 20px;
+}
+
+.current{
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
   font-size: 14px;
   margin-left: 20px;
 }
