--- a/styles.css
+++ b/styles.css
@@ -104,10 +104,9 @@
 /* Mobile View */
 @media (max-width: 767px) {
   .nav {
-    display: flex;
+    display: inline;
     justify-content: center;
     width: 100%;
-    margin-top: 10px;
   }
 
   .nav a {
