--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
   padding: 30px 50px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  position: center;
   border-bottom: 3px solid #ff4500;
 }
 
@@ -60,7 +60,7 @@
   text-decoration: none;
   font-weight: bold;
   color: black;
-  align-items: center;
+  position: center;
 }
 
 .footer {
@@ -68,7 +68,7 @@
   padding: 30px 50px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  position: center;
   border-top: 3px solid #ff4500;
 }
 
@@ -78,14 +78,14 @@
     padding: 0;
     margin: 0;
     font-size: 10px;
-    align-items: center;
+    position: center;
 }
 
 #terms a {
     text-decoration: none;
     color: black;
     font-weight: bold;
-    align-items: center;
+    position: center;
 }
 
 .logo {
