--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,21 @@
         }
         
 
+ .header {
+  background-color: #FFA500; 
+  padding: 30px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 3px solid #ff4500;
+
+.nav a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  margin-left: 20px;
+  font-size: 16px;
+}
 
 .footer {
   background-color: #FFA500;
