--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,14 @@
     .footer {
     padding: 15px 40px;
   }
+
+  h2 {
+     font-size: 20px;
+}
+
+  p {
+    font-size: 15px;
+  }
 }
 
         @media (max-width: 768px) {
