--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,13 @@
 .prothought {
   color: black;
   font-weight: bold;
+  font-size: 15px;
 }
 
 .insight {
   color: white;
   font-weight: bold;
+  font-size: 15px;
 }
 
 
