--- a/styles.css
+++ b/styles.css
@@ -84,10 +84,14 @@
   border-top: 3px solid #ff4500; /* Red bottom border */
 }
 
+.footer p{
+     font-size: 16px;
+   }
+
 #text {
     font-weight: bold;
     color: white;
-    font-size: 14px;
+    font-size: 12px;
     padding: 0;
     margin: 0;
 }
@@ -96,6 +100,7 @@
     text-decoration: none;
     color: black;
     font-weight: bold;
+    font-size: 12px;
 }
 
 /* Mobile View */
