--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
             padding: 15px;
         }        
         
-        .container img {
+        .image {
             height: 80%;
             width: 80%;
         }
