--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-     body {
+        body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
             margin: 0 auto;
@@ -69,6 +69,8 @@
   font-weight: bold;
   color: black;
   font-size: 16px;
+  margin: 10px;
+  padding: 10px;
 }
 
 
@@ -110,7 +112,7 @@
   }
 
   .nav a {
-    margin: 0 5px;
+    margin: 0 10px;
     font-size: 13px;
   }
 
