--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
             font-style: italic;
         }
         
+        h2{
+           font-style: italic;
+        }
+
         .card-title a{
             color: black;
         }
