--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,8 @@
     font-weight: bold;
     color: white;
     font-size: 12px;
-    padding: 0;
-    margin: 0;
+    padding-top: 0;
+    margin-top: 0;
 }
 
 #terms a {
