--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@
   color: black;
   font-size: 16px;
   padding: 5px;
+  display: flex;
 }
 
 
@@ -182,6 +183,7 @@
   .nav a {
     font-size: 20px;
     text-align: right;
+    display: flex;
   }
   
   .logo {
