--- a/styles.css
+++ b/styles.css
@@ -176,14 +176,12 @@
   }
 
    .nav{
-    text-align: right;
-    display: flex;
+    float: right;
     }
 
   .nav a {
     font-size: 20px;
-    text-align: right;
-    display: flex;
+    float: right;
   }
   
   .logo {
