--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
             background-color: #f5f5f5;
             margin: 0 auto;
             padding: 0 auto;
+            font-size: 16px;
         }
 
         .container {
