--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,18 @@
         
          h1{
             font-family: fantasy;
+            font-size: 2em;
             font-style: italic;
         }
         
         h2{
            font-style: italic;
+           font-size: 1.5em;
         }
+
+        p{
+           font-size: 1em;
+         }
 
         .card-title a{
             color: black;
