--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,7 @@
         .container {
             max-width: 1200px;
             padding: 15px;
+            margin: 10px;
         }        
         
         .container img {
